# jeevapathai-photobooth

./: config.py  photobooth_app.py  pyproject.toml  requirements.txt  stockage.py  view_photos.py
